--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,96 @@
 ---
+import BaseLayout from "../layouts/BaseLayout.astro";
+import Footer from "../components/Footer.astro";
+import Hero from "../components/Hero.tsx";
+import Laporan from "../components/Laporan.astro";
+import Berita from "../components/Berita.astro";
+import { layanan } from "../data/layanan.jsx";
+import { laporan } from "../data/laporan.jsx";
+import { Image } from "astro:assets";
+import { BlurFade } from "@/components/magicui/blur-fade";
+import Layanan from "@/components/Layanan.astro";
 
+const title = 'Astro';
+const data = layanan;
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout title={title}>
+		<!-- Highlight Berita Terkini -->
+		<div class="grid grid-cols-5">
+			<div class="col-span-1 bg-green-700 flex flex-col justify-end pl-20 pr-5 py-10">
+				<BlurFade delay={0.7} inView direction="left" client:load>
+					<div class="text-white space-y-5">
+						<p class="text-2xl font-bold">Highlight Berita Terkini</p>
+						<p class="text-sm">Update Berita Seputar Naungan Kemenag Kota Probolinggo</p>
+						<button class="bg-yellow-600 text-white px-4 py-2 rounded-md hover:bg-yellow-600/80 hover:px-7 duration-300 cursor-pointer">Lihat Semua</button>
+					</div>
+				</BlurFade>
+			</div>
+			<div class="col-span-4 mr-20 pb-10 pt-30">
+				<BlurFade delay={0.25} inView client:load>
+					<Hero client:load />
+				</BlurFade>
+				<!-- Berita -->
+				 <BlurFade delay={0.5} direction="right" inView client:visible>
+				 <div class="overflow-x-auto mt-20 mx-10">
+					<div class="w-full flex items-center pb-5 gap-5">
+						<Berita title="Kota Probolinggo berhasil mendapat predikat Emas" date="01 Jan 2025" image="https://picsum.photos/600/300" />
+						<Berita title="judul berita" date="01 Jan 2025" content="isi berita" image="https://picsum.photos/600/300" />
+						<Berita title="judul berita" date="01 Jan 2025" content="isi berita" image="https://picsum.photos/600/300" />
+						<Berita title="judul berita" date="01 Jan 2025" content="isi berita" image="https://picsum.photos/600/300" />
+					</div>
+				 </div>
+				 </BlurFade>
+			</div>
+		</div>
+
+		<!-- Layanan -->
+		<Layanan data={data} />
+		<!-- Laporan -->
+		<Laporan data={laporan} />
+
+		<!-- Kepala Kemenag -->
+		 <div class="grid grid-cols-2 gap-5 mx-20 my-20 items-center">
+			<BlurFade delay={0.5} inView direction="up" client:visible>
+			<Image src="/didik-kepala.png" class="rounded-xl mx-auto" alt="kepala" width={400} height={400} />
+			</BlurFade>
+			<div>
+				<p class="text-3xl font-bold">Didik Kurniawan</p>
+				<p class="font-semibold opacity-70">Kepala Kementerian Agama Kota Probolinggo</p>
+				<article class="mt-3 text-justify">
+					Assalamualaikum Warahmatullahi Wabarakatuh, <br>
+					Salam sejahtera untuk kita semua. <br> <br>
+					Kami ucapkan terima kasih atas kepercayaan masyarakat Kota Probolinggo kepada Kementerian Agama. Website ini kami hadirkan sebagai media pelayanan yang transparan, mudah diakses, dan gratis untuk seluruh warga. <br><br>
+					Kami berkomitmen memberikan layanan terbaik dengan mengutamakan kecepatan, kejelasan informasi, dan kenyamanan masyarakat dalam mengurus kebutuhan keagamaan. <br><br>
+					Mari manfaatkan layanan ini sebaik-baiknya, dan sampaikan masukan agar kami terus dapat memperbaiki pelayanan. <br><br>
+					Wassalamualaikum Warahmatullahi Wabarakatuh.
+				</article>
+			</div>
+		 </div>
+
+		 <!-- Akses Cepat -->
+		 <div class="bg-green-700 py-10">
+			<h1 class="text-center text-2xl text-white font-semibold">Layanan Pengguna</h1>
+			<p class="text-center text-white">Terhubung dengan kami melalui jalur yang mudah dan cepat. Layanan tersedia pada hari kerja pukul 08.00 - 15.30 WIB.</p>
+			<div class=" mx-20 grid grid-cols-2 gap-5 mt-10 -mb-24">
+				<a href="/lapor" class="bg-white p-10 rounded-md shadow-xl flex gap-5 items-center">
+					<img src="/logo/lapor.png" width={60} height={60} alt="lapor">
+					<div>
+						<h2 class="text-xl font-bold">Lapor</h2>
+						<p class="text-sm">Laporkan jika anda bertemu dengan pegawai kami yang tidak melaksanakan tugas sesuai SOP.</p>
+					</div>
+				</a>
+				<a href="https://wa.me/6281234234?text=Assalamualaikum%20Wr%20Wb%20Halo%20Kementerian%20Agama%20Kota%20Probolinggo" target="_blank" class="bg-white p-10 rounded-md shadow-xl flex gap-5 items-center">
+					<img src="/logo/wa.webp" width={60} height={60} alt="wa">
+					<div>
+						<h2 class="text-xl font-bold">Pesan WhatsApp</h2>
+						<p class="text-sm">Kirim pesan via WhatsApp untuk memudahkan masyarakat terhubung dengan Kementerian Agama Kota Probolinggo.</p>
+					</div>
+				</a>
+			</div>
+		 </div>
+		 <!-- Footer -->
+		 <Footer />
+
+</BaseLayout> 
+
