fix : layout news

--- a/src/components/Berita.astro
+++ b/src/components/Berita.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 const { title, slug, date, image } = Astro.props;
 ---
 
-<div class="rounded-md overflow-hidden border hover:shadow-xl duration-300 grid grid-cols-2 cursor-pointer min-h-52 min-w-150">
+<div class="rounded-md bg-white overflow-hidden border hover:shadow-xl duration-300 grid grid-cols-2 cursor-pointer min-h-52 min-w-150">
     <Image src={image} alt="berita" class="w-full h-full object-cover" width={300} height={208}/>
     <div class="space-y-2 p-5">
         <h2 class="text-lg font-semibold">{title}</h2>
