--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import { FacebookIcon, InstagramIcon, MapPin, TwitterIcon } from "lucide-react";
 ---
 
 <div class="bg-green-700 py-10 mt-40 text-white">
-    <div class="mx-20 grid grid-cols-4 gap-10 items-center">
+    <div class="mx-20 max-sm:mx-5 grid grid-cols-4 max-sm:grid-cols-1 gap-10 items-center">
         <div class="flex items-center gap-2 mx-auto">
 			<Image src="/logo/logo.png" alt="logo" width={60} height={60} />
             <div class="text-lg font-semibold">
