--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,8 +16,8 @@ const data = layanan;
 
 <BaseLayout title={title}>
 		<!-- Highlight Berita Terkini -->
-		<div class="grid grid-cols-5">
-			<div class="col-span-1 bg-green-700 flex flex-col justify-end pl-20 pr-5 py-10">
+		<div class="grid grid-cols-5 max-sm:grid-cols-1">
+			<div class="col-span-1 bg-green-700 flex flex-col justify-end pl-20 pr-5 py-10 max-sm:hidden">
 				<BlurFade delay={0.7} inView direction="left" client:load>
 					<div class="text-white space-y-5">
 						<p class="text-2xl font-bold">Highlight Berita Terkini</p>
@@ -26,13 +26,13 @@ const data = layanan;
 					</div>
 				</BlurFade>
 			</div>
-			<div class="col-span-4 mr-20 pb-10 pt-30">
+			<div class="col-span-4 md:mr-20 pb-10 pt-30 max-sm:pt-0">
 				<BlurFade delay={0.25} inView client:load>
 					<Hero client:load />
 				</BlurFade>
 				<!-- Berita -->
 				 <BlurFade delay={0.5} direction="right" inView client:visible>
-					<div class="relative w-full mx-10 mt-10">
+					<div class="relative w-full mx-10 max-sm:mx-5 mt-10 max-sm:hidden ">
 						<div class="overflow-x-auto w-full">
 						   <div class="flex items-center gap-5">
 							   <Berita title="Kota Probolinggo berhasil mendapat predikat Emas" date="01 Jan 2025" image="https://picsum.photos/600/300" />
@@ -53,7 +53,7 @@ const data = layanan;
 		<Laporan data={laporan} />
 
 		<!-- Kepala Kemenag -->
-		 <div class="grid grid-cols-2 gap-5 mx-20 my-20 items-center">
+		 <div class="grid grid-cols-2 max-sm:grid-cols-1 gap-5 mx-20 max-sm:mx-5 my-20 max-sm:my-10 items-center">
 			<BlurFade delay={0.5} inView direction="up" client:visible>
 			<Image src="/didik-kepala.png" class="rounded-xl mx-auto" alt="kepala" width={400} height={400} />
 			</BlurFade>
@@ -72,10 +72,10 @@ const data = layanan;
 		 </div>
 
 		 <!-- Akses Cepat -->
-		 <div class="bg-green-700 py-10">
-			<h1 class="text-center text-2xl text-white font-semibold">Layanan Pengguna</h1>
-			<p class="text-center text-white">Terhubung dengan kami melalui jalur yang mudah dan cepat. Layanan tersedia pada hari kerja pukul 08.00 - 15.30 WIB.</p>
-			<div class=" mx-20 grid grid-cols-2 gap-5 mt-10 -mb-24">
+		 <div class="bg-green-700 py-10 space-y-2">
+			<h1 class="text-center text-2xl max-sm:text-xl text-white font-semibold">Layanan Pengguna</h1>
+			<p class="text-center text-white max-sm:text-sm">Terhubung dengan kami melalui jalur yang mudah dan cepat. Layanan tersedia pada hari kerja pukul 08.00 - 15.30 WIB.</p>
+			<div class=" mx-20 max-sm:mx-5 grid grid-cols-2 max-sm:grid-cols-1 gap-5 mt-10 -mb-24">
 				<a href="/lapor" class="bg-white p-10 rounded-md shadow-xl flex gap-5 items-center">
 					<img src="/logo/lapor.png" width={60} height={60} alt="lapor">
 					<div>
