--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const data = layanan;
 		</div>
 
 		<!-- Layanan -->
-		<Layanan data={data} />
+		<Layanan data={data} id="layanan" />
 		<!-- Laporan -->
 		<Laporan data={laporan} />
 
@@ -72,7 +72,7 @@ const data = layanan;
 		 </div>
 
 		 <!-- Akses Cepat -->
-		 <div class="bg-green-700 py-10 space-y-2">
+		 <div class="bg-green-700 py-10 space-y-2" id="contact">
 			<h1 class="text-center text-2xl max-sm:text-xl text-white font-semibold">Layanan Pengguna</h1>
 			<p class="text-center text-white max-sm:text-sm">Terhubung dengan kami melalui jalur yang mudah dan cepat. Layanan tersedia pada hari kerja pukul 08.00 - 15.30 WIB.</p>
 			<div class=" mx-20 max-sm:mx-5 grid grid-cols-2 max-sm:grid-cols-1 gap-5 mt-10 -mb-24">
