--- a/src/components/Layanan.astro
+++ b/src/components/Layanan.astro
@@ -6,9 +6,9 @@ import { MagicCard } from "./magicui/magic-card";
 
 
 const randombackground = ['bg-red-200', 'bg-blue-200', 'bg-green-200', 'bg-yellow-200', 'bg-purple-200', 'bg-pink-200'];
-const {data} = Astro.props;
+const {data, id} = Astro.props;
 ---
-        <div class="mx-20 max-sm:mx-5 my-30 max-sm:my-5">
+        <div class="mx-20 max-sm:mx-5 my-30 max-sm:my-5" id={id}>
             <div class="grid grid-cols-4 row-auto max-sm:grid-cols-2 gap-5 max-sm:gap-2">
                 {data.map((item: any, index: number) => (
                     <BlurFade delay={0.12 * index} direction="left" inView client:visible>
@@ -20,7 +20,7 @@ const {data} = Astro.props;
                                         </div>
                                         <h1 class="text-lg max-sm:text-sm font-bold max-sm:font-medium">{item.title}</h1>
                                         <p class="text-sm max-sm:hidden">{item.description}</p>
-                                        <a href="/layanan" class="text-blue-600 group hover:underline cursor-pointer text-sm flex items-center justify-center">
+                                        <a href="/layanan" class="text-green-600 group hover:underline cursor-pointer text-sm flex items-center justify-center">
                                             <span>Selengkapnya</span>
                                             <MoveRight className="w-4 h-4 transition-transform group-hover:translate-x-1" />
                                         </a>
