--- a/src/pages/lapor/index.astro
+++ b/src/pages/lapor/index.astro
@@ -6,7 +6,7 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-    <div class="container mx-20 my-30">
+    <div class="max-sm:mx-5 mx-20 my-30">
         <h1 class="text-3xl font-bold mb-10">Laporkan Masalah</h1>
         <Card>
             <CardContent>
