--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const data = layanan;
 		</div>
 
 		<!-- Layanan -->
-		<Layanan data={data} id="layanan" />
+		<Layanan data={data} className="mx-20 max-sm:mx-5 my-30 max-sm:my-5" id="layanan" />
 		<!-- Laporan -->
 		<Laporan data={laporan} />
 
