--- a/src/pages/layanan/sub-layanan/[id].astro
+++ b/src/pages/layanan/sub-layanan/[id].astro
@@ -22,10 +22,10 @@ const { id } = Astro.params
 
 <BaseLayout title={`Submit Layanan ${id}`}>
   <div class="mx-20 max-sm:mx-5 mt-30 space-y-2">
-    <h1 class="text-3xl font-bold capitalize">Submit Layanan {id}</h1>
+    <h1 class="text-3xl font-bold capitalize max-sm:text-2xl">Submit Layanan {id}</h1>
     <p class="opacity-70">Silahkan submit layanan yang anda perlukan</p>
 
-    <div class="grid grid-cols-2 gap-20 mt-10">
+    <div class="grid grid-cols-2 max-sm:grid-cols-1 gap-20 max-sm:gap-10 mt-10">
         <Syarat syarat={syarat} client:visible />
         <form action="/submit" enctype="multipart/form-data" class="space-y-3" method="POST">
             <div class="flex flex-col gap-1">
