--- a/src/pages/berita/blog/[slug].astro
+++ b/src/pages/berita/blog/[slug].astro
@@ -1,42 +1,27 @@
 ---
 import NewsLayout from "@/layouts/NewsLayout.astro";
+import pb from "@/lib/database";
 const { slug } = Astro.params;
 
-const posts = [
-    {
-        title: "Probolinggo Menjadi Bagian orang baik",
-        slug: "probolinggo-menjadi-bagian-orang-baik",
-        date: "12 Oktober 2023",
-        created_at: "12 Oktober 2023",
-        author: "Admin",
-        category: "Pertanian",
-        image: "https://picsum.photos/500/500",
-        content: "Probolinggo adalah kota yang menawarkan banyak keunikan, seperti keindahan alamnya, keberagaman budayanya, dan keberhasilan pertaniannya. Kota ini memiliki banyak tempat wisata, seperti taman bermain, taman bermain, dan taman bermain. Kota ini juga memiliki banyak tempat wisata, seperti taman bermain, taman bermain, dan taman bermain."
-    }
-]
-
-const post = posts.find((item) => item.slug === slug);
-
-if (!post) {
-    throw new Error("Post not found");
-}
+const detail_berita = await pb.collection('news').getFullList({expand:'category', filter:`slug = '${slug}'`})
+const post = detail_berita[0]
 
 ---
 
-<NewsLayout title={post.title} description={post.content} url={post.slug} image={post.image}>
+<NewsLayout title={post.title} description={post.content} url={post.slug} image={pb.files.getURL(post, post.document)}>
   <article class="my-10 mx-30 max-sm:mx-10 space-y-3">
     <h1 class=" text-4xl max-sm:text-3xl font-semibold font-serif">{post.title}</h1>
-    <p class="text-sm max-sm:text-xs text-gray-500"><a href="http://localhost:3000/berita" class="font-medium">{post.category}</a> | {post.created_at}</p>
+    <p class="text-sm max-sm:text-xs text-gray-500"><a href={`/berita/kategori/${post.expand?.category?.name}`} class="font-medium">{post.expand?.category?.name}</a> | {new Date( post.created).toLocaleDateString('id-ID',{day:'2-digit', month:'long', year:'numeric'})}</p>
     <div class="flex items-center justify-between">
         <div class="flex items-center gap-5">
             <img src="/avatar.png" alt="avatar" class="w-10 h-10 max-sm:w-8 max-sm:h-8 rounded-full">
-            <p class="text-sm max-sm:text-xs text-gray-500">{post.author}</p>
+            <p class="text-sm max-sm:text-xs text-gray-500">Humas Kemenag</p>
         </div>
 
     </div>
-    <img src={post.image} alt="gambar" class="my-5 w-full h-96 max-sm:h-64 object-cover object-center rounded-2xl">
+    <img src={pb.files.getURL(post, post.document)} alt="gambar" class="my-5 w-full h-96 max-sm:h-64 object-cover object-center rounded-2xl">
     <article class="text-justify mx-30 max-sm:mx-5">
-        {post.content}
+        <div set:html={post.content} />
     </article>
   </article>
 </NewsLayout>
