--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,12 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Footer from "../components/Footer.astro";
 import Hero from "../components/Hero.tsx";
-import Berita from "../components/Berita.astro";
 import { layanan } from "../data/layanan.jsx";
-import { Image } from "astro:assets";
 import { BlurFade } from "@/components/magicui/blur-fade";
 import Layanan from "@/components/Layanan.astro";
 import { Laporan } from "@/components/Laporan";
+import { Sambutan } from "@/components/Sambutan";
+import { BeritaList } from "@/components/BeritaList";
 
 const data = layanan;
 ---
@@ -29,19 +29,7 @@ const data = layanan;
 					<Hero client:load />
 				</BlurFade>
 				<!-- Berita -->
-				 <BlurFade delay={0.5} direction="right" inView client:visible>
-					<div class="relative w-full mx-10 max-sm:mx-5 mt-10 max-sm:hidden ">
-						<div class="overflow-x-auto w-full">
-						   <div class="flex items-center gap-5">
-							   <Berita title="Kota Probolinggo berhasil mendapat predikat Emas" date="01 Jan 2025" image="https://picsum.photos/600/300" />
-							   <Berita title="judul berita" date="01 Jan 2025" content="isi berita" image="https://picsum.photos/600/300" />
-							   <Berita title="judul berita" date="01 Jan 2025" content="isi berita" image="https://picsum.photos/600/300" />
-							   <Berita title="judul berita" date="01 Jan 2025" content="isi berita" image="https://picsum.photos/600/300" />
-						   </div>
-					   </div>
-					   <div class="pointer-events-none absolute inset-y-0 right-0 w-1/4 bg-gradient-to-l from-accent"></div>
-					</div>
-				 </BlurFade>
+				 <BeritaList client:only="react"/>
 			</div>
 		</div>
 
@@ -51,23 +39,7 @@ const data = layanan;
 		<Laporan client:only="react"/>
 
 		<!-- Kepala Kemenag -->
-		 <div class="grid grid-cols-2 max-sm:grid-cols-1 gap-5 mx-20 max-sm:mx-5 my-20 max-sm:my-10 items-center">
-			<BlurFade delay={0.5} inView direction="up" client:visible>
-			<Image src="/didik-kepala.png" class="rounded-xl mx-auto" alt="kepala" width={400} height={400} />
-			</BlurFade>
-			<div>
-				<p class="text-3xl font-bold">Didik Kurniawan</p>
-				<p class="font-semibold opacity-70">Kepala Kementerian Agama Kota Probolinggo</p>
-				<article class="mt-3 text-justify">
-					Assalamualaikum Warahmatullahi Wabarakatuh, <br>
-					Salam sejahtera untuk kita semua. <br> <br>
-					Kami ucapkan terima kasih atas kepercayaan masyarakat Kota Probolinggo kepada Kementerian Agama. Website ini kami hadirkan sebagai media pelayanan yang transparan, mudah diakses, dan gratis untuk seluruh warga. <br><br>
-					Kami berkomitmen memberikan layanan terbaik dengan mengutamakan kecepatan, kejelasan informasi, dan kenyamanan masyarakat dalam mengurus kebutuhan keagamaan. <br><br>
-					Mari manfaatkan layanan ini sebaik-baiknya, dan sampaikan masukan agar kami terus dapat memperbaiki pelayanan. <br><br>
-					Wassalamualaikum Warahmatullahi Wabarakatuh.
-				</article>
-			</div>
-		 </div>
+		<Sambutan client:only="react" />
 
 		 <!-- Akses Cepat -->
 		 <div class="bg-green-700 py-10 space-y-2" id="contact">
