--- a/src/components/berita/VerticalNews.astro
+++ b/src/components/berita/VerticalNews.astro
@@ -3,7 +3,7 @@ const {title, category, image, description} = Astro.props
 ---
 
  <div class="grid grid-cols-2 gap-5 items-center overflow-hidden">
-    <img src={image} class="w-full object-cover rounded-xl" alt="gambar">
+    <img src={image} class="w-full h-48 object-cover rounded-xl" alt="gambar">
     <div class="flex flex-col gap-3">
         <div class="bg-amber-600 text-white rounded-full py-1 px-3 max-sm:text-sm w-fit">{category}</div>
         <h1 class="font-medium text-lg max-sm:text-sm">{title}</h1>
