--- a/src/pages/berita/index.astro
+++ b/src/pages/berita/index.astro
@@ -2,22 +2,27 @@
 import Hero from "@/components/berita/Hero.astro";
 import HorizontalNews from "@/components/berita/HorizontalNews.astro";
 import NewsLayout from "@/layouts/NewsLayout.astro";
+import pb from "@/lib/database";
+
+const beritas = await pb.collection('news').getFullList({expand:'category', sort:'-created', limit: 12})
+const berita = beritas.slice(0, 4)
+const beritaTerbaru = beritas.slice(4, 8)
 ---
 
 <NewsLayout title="Home">
 	<section class="mx-20 max-sm:mx-5">
 		<div class=" bg-gray-100 rounded p-3 w-full my-5">
-			<span class="font-semibold text-orange-600 mr-5 animate-pulse max-sm:text-sm">Update Baru: </span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates.
-		</div>
-		<Hero/>
+			<span class="font-semibold text-orange-600 mr-5 animate-pulse max-sm:text-sm">Update Baru: </span>{berita[0].title}</div>
+		<Hero data={berita}/>
 	
 		<!-- Latest News -->
 		 <div class="flex items-center justify-between mt-20 mb-5">
 			 <h1 class="text-2xl font-semibold">Berita Terkini</h1>
-			 <a href="/berita" class="text-amber-600 text-sm">Lihat Semua</a>
 		 </div>
 		 <div class="grid grid-cols-4 max-sm:grid-cols-1 gap-5 mb-20">
-			 <HorizontalNews title="Probolinggo Menjadi Bagian orang baik" date="12 Oktober 2023" category="Pertanian" image="https://picsum.photos/500/500" description="Probolinggo adalah kota yang menawarkan banyak keunikan, seperti keindahan alamnya, keberagaman budayanya, dan keberhasilan pertaniannya." />
+			 {beritaTerbaru.map((item) => (
+				<HorizontalNews title={item.title} date={item.created} category={item.expand?.category?.name} image={pb.files.getURL(item, item.document)} description={item.content} slug={item.slug} />
+			 ))}
 		 </div>
 	</section>
 </NewsLayout>
