submit form and layanan clear

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Footer from "../components/Footer.astro";
 import Hero from "../components/Hero.tsx";
 import { layanan } from "../data/layanan.jsx";
 import { BlurFade } from "@/components/magicui/blur-fade";
-import Layanan from "@/components/Layanan.astro";
+import { Layanan } from "@/components/Layanan";
 import { Laporan } from "@/components/Laporan";
 import { Sambutan } from "@/components/Sambutan";
 import { BeritaList } from "@/components/BeritaList";
@@ -34,7 +34,7 @@ const data = layanan;
 		</div>
 
 		<!-- Layanan -->
-		<Layanan data={data} className="mx-20 max-sm:mx-5 my-30 max-sm:my-5" id="layanan" />
+		<Layanan data={data} className="mx-20 max-sm:mx-5 my-30 max-sm:my-5" id="layanan" client:only="react"/>
 		<!-- Laporan -->
 		<Laporan client:only="react"/>
 
