--- a/src/pages/layanan/sub-layanan/[id].astro
+++ b/src/pages/layanan/sub-layanan/[id].astro
@@ -1,43 +1,17 @@
 ---
-import Syarat from '@/components/Syarat'
 import BaseLayout from '@/layouts/BaseLayout.astro'
-const syarat = [
-    {
-        title: 'Syarat dan Ketentuan',
-        content: 'Warga kota Probolinggo yang memiliki NIK dan Kartu Keluarga (KK) harus memiliki minimal umur 17 tahun.'
-    },
-    {
-        title: 'Syarat dan Ketentuan',
-        content: 'Warga kota Probolinggo yang memiliki NIK dan Kartu Keluarga (KK) harus memiliki minimal umur 17 tahun.'
-    },
-    {
-        title: 'Syarat dan Ketentuan',
-        content: 'Warga kota Probolinggo yang memiliki NIK dan Kartu Keluarga (KK) harus memiliki minimal umur 17 tahun.'
-    },
-
-    
-]
+import { LayananSubmit } from "@/components/LayananSubmit";
+import pb from '@/lib/database';
 const { id } = Astro.params 
+const data = await pb.collection('services').getOne(id as string)
 ---
 
-<BaseLayout title={`Submit Layanan ${id}`}>
+<BaseLayout title={`Submit Layanan ${data.name}`}>
   <div class="mx-20 max-sm:mx-5 mt-30 space-y-2">
-    <h1 class="text-3xl font-bold capitalize max-sm:text-2xl">Submit Layanan {id}</h1>
+    <h1 class="text-3xl font-bold capitalize max-sm:text-2xl">Submit Layanan {data.name}</h1>
     <p class="opacity-70">Silahkan submit layanan yang anda perlukan</p>
 
-    <div class="grid grid-cols-2 max-sm:grid-cols-1 gap-20 max-sm:gap-10 mt-10">
-        <Syarat syarat={syarat} client:visible />
-        <form action="/submit" enctype="multipart/form-data" class="space-y-3" method="POST">
-            <div class="flex flex-col gap-1">
-                <label for="nama" class="font-semibold">Nama Lengkap</label>
-                <input type="text" id="nama" name="nama" placeholder="Fulan bin Fulan" class="w-full p-3 border border-gray-300 rounded-md bg-white" />
-            </div>
-            <div class="flex flex-col gap-1">
-                <label for="email" class="font-semibold">Email Aktif</label>
-                <input type="email" id="email" name="email" placeholder="fulan@mail.com" class="w-full p-3 border border-gray-300 rounded-md bg-white" />
-            </div>
-            <button type="submit" class="w-full p-3 bg-green-500 text-white rounded-md mt-5">Kirim</button>
-        </form> 
+    <LayananSubmit layananID={id as string} className="grid grid-cols-2 max-sm:grid-cols-1 gap-20 max-sm:gap-10 mt-10" client:only="react"/>
     </div>
   </div>
 
