--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title ? `${title} - ${import.meta.env.SITE_NAME}` : import.meta.env.SITE_NAME}</title>
+		<title>{title ? `${title} - ${process.env.SITE_NAME || import.meta.env.SITE_NAME}` : process.env.SITE_NAME || import.meta.env.SITE_NAME}</title>
 	</head>
 	<body class="bg-accent relative">
 		<Navbar client:load/>
