--- a/src/components/berita/VerticalNews.astro
+++ b/src/components/berita/VerticalNews.astro
@@ -1,5 +1,5 @@
 ---
-const {title, category, image, description} = Astro.props
+const {title, category, image, description, slug} = Astro.props
 ---
 
  <div class="grid grid-cols-2 gap-5 items-center overflow-hidden">
@@ -7,6 +7,6 @@ const {title, category, image, description} = Astro.props
     <div class="flex flex-col gap-3">
         <div class="bg-amber-600 text-white rounded-full py-1 px-3 max-sm:text-sm w-fit">{category}</div>
         <h1 class="font-medium text-lg max-sm:text-sm">{title}</h1>
-        <p class="opacity-50 text-sm text-justify max-sm:text-sm">{description.trim().slice(0, 90) + '...'} <a href="/" class="text-amber-600 hover:underline">Selengkapnya</a></p>
+        <p class="opacity-50 text-sm text-justify max-sm:text-sm">{description.trim().slice(0, 90) + '...'} <a href={`/berita/blog/${slug}`} class="text-amber-600 hover:underline">Selengkapnya</a></p>
     </div>
 </div>
