change mx laporan detail

--- a/src/pages/informasi/index.astro
+++ b/src/pages/informasi/index.astro
@@ -4,7 +4,7 @@ import {LaporanDetail} from "@/components/LaporanDetail";
 ---
 
 <BaseLayout title="Laporan">
-    <div class="container mx-20 my-30">
+    <div class="mx-20 max-sm:mx-5 my-30">
         <h1 class="text-3xl font-bold">Informasi Terbaru</h1>
         <!-- Laporan -->
          <LaporanDetail client:only="react"/>
