--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,6 +59,10 @@ import { BeritaList } from "@/components/BeritaList";
 				</a>
 			</div>
 		 </div>
+		 <!-- Zona Itegritas -->
+		  <div class="mt-30 mx-20 max-sm:mx-5 md:h-96 max-xl:h-full overflow-hidden rounded-2xl">
+			<img src="/logo/zona-integritas.webp" alt="zona-integritas" class="w-full h-full object-cover">
+		  </div>
 		 <!-- Footer -->
 		 <Footer />
 
