--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,9 @@ import { BeritaList } from "@/components/BeritaList";
 			</div>
 		</div>
 
+		<h3 class="text-2xl font-bold mt-20 mb-10 mx-20 max-sm:mx-5 text-center max-sm:mt-10" id="layanan">Layanan PTSP</h3>
 		<!-- Layanan -->
-		<Layanan className="mx-20 max-sm:mx-5 my-30 max-sm:my-5" id="layanan" client:only="react"/>
+		<Layanan className="mx-20 max-sm:mx-5 mb-30 max-sm:my-5" client:only="react"/>
 		<!-- Laporan -->
 		<Laporan client:only="react"/>
 
