change to cloudflare

--- a/src/layouts/NewsLayout.astro
+++ b/src/layouts/NewsLayout.astro
@@ -32,5 +32,6 @@ const { title, description,url,image, } = Astro.props;
 	<body>
         <Navbar/>
 		<slot/>
+        <script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script>
 	</body>
 </html>
