--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import { BeritaList } from "@/components/BeritaList";
 					<Hero client:load />
 				</BlurFade>
 				<!-- Berita -->
-				 <BeritaList client:only="react"/>
+				 <BeritaList client:visible/>
 			</div>
 		</div>
 
