--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,5 +16,6 @@ const { title } = Astro.props;
 	<body class="bg-accent relative">
 		<Navbar client:load/>
 		<slot/>
+		<script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script>
 	</body>
 	</html>
