change kementerian to kantor kementerian

--- a/src/components/berita/Navbar.astro
+++ b/src/components/berita/Navbar.astro
@@ -21,7 +21,7 @@ const isActive = (href: string) => {
       <Image src="/logo/logo.png" alt="logo" width={40} height={40} />
       <a href="/berita">
         <p class="text-sm">Portal Berita</p>
-        <p class="text-sm">Kementerian Agama Kota Probolinggo</p>
+        <p class="text-sm">Kantor Kementerian Agama Kota Probolinggo</p>
       </a>
     </div>
 
